# watchflow

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: config.example.json
src/: douban_wish_quark_downloader.py  watchflow.py
tests/: test_watchflow.py
